--- a/package.json
+++ b/package.json
@@ -2,22 +2,16 @@
   "name": "battleship",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "private": true,
+  "mode": "development",
+  "devtool": "inline-source-map",
   "scripts": {
-    "test": "jest",
-    "watch": "jest --watch"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ssomers42/battleship.git"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ssomers42/battleship/issues"
-  },
-  "homepage": "https://github.com/ssomers42/battleship#readme",
   "devDependencies": {
-    "jest": "^28.1.0"
+    "webpack": "^5.72.1",
+    "webpack-cli": "^4.9.2"
   }
 }
